Source/bmalloc/bmalloc/SmallPage.h
@@ -38,7 +38,6 @@ class SmallPage : public ListNode<SmallPage> {
 public:
     SmallPage()
         : m_hasFreeLines(true)
-        , m_objectType(ObjectType::Large)
     {
     }
 
@@ -49,28 +48,19 @@ public:
     size_t sizeClass() { return m_sizeClass; }
     void setSizeClass(size_t sizeClass) { m_sizeClass = sizeClass; }
     
-    ObjectType objectType() const { return m_objectType; }
-    void setObjectType(ObjectType objectType) { m_objectType = objectType; }
-
     bool hasFreeLines(std::lock_guard<StaticMutex>&) const { return m_hasFreeLines; }
     void setHasFreeLines(std::lock_guard<StaticMutex>&, bool hasFreeLines) { m_hasFreeLines = hasFreeLines; }
     
     SmallLine* begin();
-    SmallLine* end();
 
     unsigned char slide() const { return m_slide; }
     void setSlide(unsigned char slide) { m_slide = slide; }
-
-    unsigned char smallPageCount() const { return m_smallPageCount; }
-    void setSmallPageCount(unsigned char smallPageCount) { m_smallPageCount = smallPageCount; }
-
+    
 private:
     unsigned char m_hasFreeLines: 1;
     unsigned char m_refCount: 7;
     unsigned char m_sizeClass;
-    unsigned char m_smallPageCount;
     unsigned char m_slide;
-    ObjectType m_objectType;
 
 static_assert(
     sizeClassCount <= std::numeric_limits<decltype(m_sizeClass)>::max(),
